website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.0.1/guides/docs/docs-create-doc.mdx
---
id: create-doc
description: Create a Markdown Document
slug: /create-doc
---

# 建立文件

建立一個 Markdown 檔案，命名為 `greeting.md`，並將其放置在 `docs` 目錄下。

```bash
website # root directory of your site
├── docs
│   └── greeting.md
├── src
│   └── pages
├── docusaurus.config.js
├── ...
```

```md
---
description: Create a doc page with rich content.
---

# Hello from Docusaurus

Are you ready to create the documentation site for your open source project?

## Headers

will show up on the table of contents on the upper right

So that your users will know what this page is all about without scrolling down or even without reading too much.

## Only h2 and h3 will be in the TOC by default.

You can configure the TOC heading levels either per-document or in the theme configuration.

The headers are well-spaced so that the hierarchy is clear.

- lists will help you
- present the key points
- that you want your users to remember
  - and you may nest them
    - multiple times
```

:::note

預設情況下，`docs` 目錄下所有以下劃線 (`_`) 為前綴的檔案都會被視為「部分」頁面並被忽略。

進一步了解[如何導入部分頁面](../markdown-features/markdown-features-react.mdx#importing-markdown)。

:::

## 文件前言資料 {#doc-front-matter}

[前言資料](../markdown-features/markdown-features-intro.mdx#front-matter)用於為文件頁面提供額外的元數據。前言資料是可選的——即使沒有前言資料，Docusaurus 也能推斷出所有必要的元數據。例如，下文介紹的[文件標籤](#doc-tags)功能就需要使用前言資料。有關所有可能的字段，請參閱[API 文檔](../../api/plugins/plugin-content-docs.mdx#markdown-front-matter)。

## 文件標籤 {#doc-tags}

你可以選擇性地為文件頁面添加標籤，這在[文件側邊欄](./sidebar/index.mdx)之外引入了另一種分類維度。標籤以前言資料中的標籤列表形式傳遞：

```md "your-doc-page.md"
---
id: doc-with-tags
title: A doc with tags
tags:
  - Demo
  - Getting started
---
```

:::tip

標籤也可以通過 `tags: [Demo, Getting started]` 的形式聲明。

進一步了解所有可能的[Yaml 陣列語法](https://www.w3schools.io/file/yaml-arrays/)。

:::

## 組織文件夾結構 {#organizing-folder-structure}

`docs` 文件夾下的 Markdown 文件排列方式可能會對 Docusaurus 的內容生成產生多種影響。然而，大多數影響可以與文件結構解耦。

### 文件 ID {#document-id}

每個文件都有一個唯一的 `id`。預設情況下，文件的 `id` 是相對於根 docs 目錄的文件名（不包含擴展名）。

例如，`greeting.md` 的 ID 是 `greeting`，而 `guide/hello.md` 的 ID 是 `guide/hello`。

```bash
website # Root directory of your site
└── docs
   ├── greeting.md
   └── guide
      └── hello.md
```

然而，`id` 的**最後一部分**可以由用戶在前言資料中定義。例如，如果 `guide/hello.md` 的內容如下定義，其最終的 `id` 將是 `guide/part1`。

```md
---
id: part1
---

Lorem ipsum
```

ID 用於在手動編寫側邊欄時引用文件，或在與文件相關的佈局組件或鉤子中使用。

### 文件 URL {#doc-urls}

預設情況下，文件的 URL 位置是其相對於 `docs` 文件夾的文件路徑。使用 `slug` 前言資料可以更改文件的 URL。

例如，假設你的網站結構如下：

```bash
website # Root directory of your site
└── docs
    └── guide
        └── hello.md
```

預設情況下，`hello.md` 將在 `/docs/guide/hello` 路徑下可用。你可以將其 URL 位置更改為 `/docs/bonjour`：

```md
---
slug: /bonjour
---

Lorem ipsum
```

`slug` 將附加到文件插件的 `routeBasePath` 上，預設為 `/docs`。有關如何從 URL 中移除 `/docs` 部分，請參閱[僅文件模式](docs-introduction.mdx#docs-only-mode)。

:::note

可以使用以下形式：

- 絕對 slug：`slug: /mySlug`、`slug: /`...
- 相對 slug：`slug: mySlug`、`slug: ./../mySlug`...

:::

如果你希望某個文件在根目錄下可用，並擁有類似 `https://docusaurus.io/docs/` 的路徑，可以使用 slug 前言資料：

```md
---
id: my-home-doc
slug: /
---

Lorem ipsum
```

### 側邊欄 {#sidebars}

當使用[自動生成的側邊欄](./sidebar/autogenerated.mdx)時，檔案結構將決定側邊欄的結構。

我們對於檔案系統組織的建議是：讓您的檔案系統鏡像反映側邊欄結構（這樣您就不需要手動編寫 `sidebars.js` 檔案），並使用 `slug` 前置元資料來自訂每個文件的 URL。